syntax = "proto3";

package pb;
option go_package = "pb";

// Handshake protocol message format

// data common to all messages - Top level msg format
message CommonMessageData {
    bytes sessionId = 1;  // always set (handshake or other protocol messages)
    bytes payload = 2;    // encrypted payload with session aes key - binary protobufs. empty for handshake methods

    // we don't want to add anything here even protocol names as it goes unencrypted over the wire
}

// Handshake protocol data used for both request and response - sent unencrypted over the wire
message HandshakeData {
    bytes sessionId = 1;    // for req - same as iv. for response - set to req id
    bytes payload = 2; // empty for now
    string protocol = 3; // 'handshake/req' || 'handshake/resp'
    bytes nodePubKey = 4; // 65 bytes uncompressed
    bytes iv = 5; // 16 bytes - AES-256-CBC IV
    bytes pubKey = 6; // 65 bytes (uncompressed) ephemeral public key
    bytes hmac = 7; // HMAC-SHA-256 32 bytes
    string tcpAddress = 8; // remote node tcp address and port e.g. x.x.x.x:2424
    string sign = 9; // hex encoded string 32 bytes sign of all above data by node public key (verifies he has the priv key and he wrote the data
}

// just here for now

// used for protocol messages (non-handshake) - this is the decrypted CommonMessageData.payload
// it allows multiplexing back to higher level protocols
// data is here and not in CommonMessageData to avoid leaked data on unencrypted connections
message ProtocolMessage {
    Metadata metadata = 1;
}

message Metadata {
    string protocol = 1;    // protocol id
    bytes reqId = 2;
    string clientVersion = 3; // author client version
    int64 timestamp = 4;      // unix time - authoring time (not sending time)
    bool gossip = 5;          // true to have receiver peer gossip the message to its neighbors
    bytes authPubKey = 6;     // Authoring node Secp256k1 public key (32bytes) - may not be snder
    string authorSign = 7;    // signature of message data by author + method specific data by message creator node. format: hexEncode([]bytes)
}

// ping is our example protocol
message PingReqData {
    Metadata metadata = 1;
    string ping = 2; // the echo message itself - protocol specific - starts at #2
}

message PingRespData {
    Metadata metadata = 1;
    string pong = 2; // the echo message itself - protocol specific - starts at #2
}