syntax = "proto3";

package pb;
option go_package = "pb";

message NodeInfo {
    bytes nodeId = 1;
    string tcpAddress = 2;
}